lab3/examples/test.oc.err
test.oc:127:20: warning: missing terminating " character [enabled by default]
 string notclosed = "a;
                    ^
XRP:127.20: invalid token ("a;)
XRP:128.1: syntax error, unexpected TOK_STRING
XRP:128.19: invalid token ("\a\basdffdsk")
